# Minimal-irc-client

./: .gitignore  README.md  pyproject.toml
