[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minimal_irc_client"
version = "0.1.0"
description = "A minimal command-line IRC client."
readme = "README.md"
requires-python = "<=3.9" 
dependencies = [
    "pydle>=1.0.1"
]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
